# mcd_admin_api

./: .env.sample  Cargo.toml  README.md
migrations/2020-03-21-203259_create_entries/: up.sql
migrations/2020-03-21-225701_alter_table_column_tag/: down.sql  up.sql
migrations/2020-03-21-232123_delete_table_column_english_definitions/: down.sql  up.sql
migrations/2020-07-19-231322_create_users/: up.sql
src/: main.rs  middleware.rs  models.rs  schema.rs  utils.rs
