[package]
name = "mcd_admin_api"
version = "0.1.0"
authors = ["Adam Recvlohe <adam.recvlohe@gmail.com>"]
edition = "2018"


[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"
actix-cors = "0.2.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.8"
jsonwebtoken = "7"
env_logger = "0.7"
futures = "0.3.5"
